// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions > api > planTrip should gracefully handle bad response 1`] = `
Array [
  Array [
    Object {
      "type": "PLAN_REQUEST",
    },
  ],
  Array [
    Object {
      "error": true,
      "payload": [Error: Received error from server],
      "type": "PLAN_ERROR",
    },
  ],
]
`;

exports[`actions > api > planTrip should make a query to OTP with customOtpQueryBuilder in state config 1`] = `"/api/plan?from=here&to=there"`;

exports[`actions > api > planTrip should make a query to OTP with customOtpQueryBuilder in state config 2`] = `
Array [
  Array [
    Object {
      "type": "PLAN_REQUEST",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "fake": "response",
      },
      "type": "PLAN_RESPONSE",
    },
  ],
]
`;

exports[`actions > api > planTrip should make a query to OTP with customOtpQueryBuilder sent to action 1`] = `"/api/plan?from=here&to=there"`;

exports[`actions > api > planTrip should make a query to OTP with customOtpQueryBuilder sent to action 2`] = `
Array [
  Array [
    Object {
      "type": "PLAN_REQUEST",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "fake": "response",
      },
      "type": "PLAN_RESPONSE",
    },
  ],
]
`;

exports[`actions > api > planTrip should make a query to OTP with default settings 1`] = `"/api/plan?arriveBy=false&fromPlace=12%2C34&showIntermediateStops=true&toPlace=34%2C12"`;

exports[`actions > api > planTrip should make a query to OTP with default settings 2`] = `
Array [
  Array [
    Object {
      "type": "PLAN_REQUEST",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "fake": "response",
      },
      "type": "PLAN_RESPONSE",
    },
  ],
]
`;
